app/assets/stylesheets/users.css
/* FOR NEW/EDIT USER FORM STYLING: see application.css */
/* Those classes are shared with SESSIONS#LOGIN form */

/* USER SHOW PAGE */
/* For styling the EDIT/DELETE buttons, see application.css (.cu_profile_links) */
/* That class is also used to style the EDIT/DELETE buttons on char show pg. */

#user_showpg_wrapper {
  /* --rpanel_width: 55%; */
  box-sizing: border-box;
  height: 100%; width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
  background-color: #000;
}

#user_showpg_profile_bg {
  display: flex;
  justify-content: center;
  flex-direction: column;
  height: 100%; width: 45%;
  max-width: 700px;
  border-top-right-radius: 50%;
  border-bottom-right-radius: 50%;
  background-color: #FFF;
}

.user_showpg_profile_container {
  box-sizing: border-box;
  width: 100%;
  padding-left: 80px; margin-bottom: 20px;
}


/* LEFT PANEL - WELCOME SECTION */
/* NOTE: Styling for follow/unfollow buttons is in application.css */
.user_showpg_welcome_block {
  height: 100px;
  position: relative;
  top: 0px; left: 0px;
  display: flex;
  flex-direction: row;
  align-items: center;
}

.user_showpg_profile_pic {
  width: 102px;
  height: 102px;
  border-radius: 52px;
  float: left;
  border: 2px solid #000;
  box-shadow: 5px 5px 15px #000;
  overflow: hidden;
}

.user_showpg_profile_pic img {
  width: 102px;
}

.user_showpg_greeting {
  padding-left: 20px;
  float: left;
  font-family: "Roboto Condensed";
  font-size: 30px;
  margin: 0px 0px 10px 20px;
}

#followers_section {
  display: flex;
  flex-direction: row;
  align-items: center;
  margin: 40px 0px 0px 23px;
  padding: 5px 0px;
  border-left: 5px solid #000;
}

.follow_count_container {
  text-align: center;
  font-family: "Roboto Condensed";
  font-size: 14px;
  text-transform: uppercase;
  padding: 0px 25px;
}
.follow_count_num { font-size: 25px; }

#followers_section .follow_count_container:first-child { border-right: 1px solid #000; }


/* LEFT PANEL - CHARACTER SECTION */
#user_showpg_char_section {
  width: 400px; 
  position: relative;
  top: 0px; left: 0px;
  padding: 20px 0px 0px 20px;
}

.user_showpg_section_title {
  font-family: "Cantarell";
  font-size: 20px;
  text-transform: uppercase;
  margin: 20px 0px 0px;
}

.user_showpg_chars_table {
  display: flex;
  flex-direction: row;
  padding: 5px 0px;
}
.user_showpg_chars_table ul:first-child { padding: 5px 25px; }

.user_showpg_chars_table ul:last-child { 
  border:none; 
  margin-left: 20px;
}

ul.user_showpg_chars_list {
  list-style: none;
  padding-left: 5px;
  margin-top: 0px;
  margin-left: 5px;
  font-family: "Roboto Condensed";
  border-left: 5px solid #000;
}

ul.user_showpg_chars_list li { padding-bottom: 5px; }
ul.user_showpg_chars_list li:last-child { padding-bottom: 0px;}

ul.user_showpg_chars_list a, ul.user_showpg_chars_list a:visited, ul.user_showpg_chars_list a:active {
  color: #ff0000;
  text-decoration: none;
}

ul.user_showpg_chars_list a:hover {
  text-decoration: line-through;
}


/* LEFT PANEL - BATTLE(S) IN PROGRESS SECTION */
.user_bip_container {
  padding: 20px;
} 

.user_bip_title {
  font-family: 'Cantarell';
  font-size: 20px;
  font-weight: bold;
  text-transform: uppercase;
  letter-spacing: -1px;
}

.bip_links {
  font-family: 'Roboto Condensed';
  font-size: 20px;
  color: #f00;
  border-left: 5px solid #000;
  padding-left: 25px;
  margin: 5px;
}

a.bip_link, a.bip_link:active, a.bip_link:visited {
  color: #f00;
  text-decoration: none;
  display: block;
}

a.bip_link:hover {
  text-decoration: underline;
}



/* PROFILE RIGHT PANEL */

.user_showpg_right_container {
  box-sizing: border-box;
  width: 55%;
  height: calc(100% - 120px);
  margin: 50px 100px 0px;
  color: #000;
  align-self: start;
  display: flex;
  flex-direction: column;
}

.user_showpg_tab_container {
  --rpanel_width: calc(55% - 350px);
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  padding: 20px;
  background-color: #fff;
  /* display: flex;
  flex-direction: row; */
}

.rpanel_tabs {
  display: flex;
  flex-direction: row;
  width: 100%;
  height: 50px;
}

.rpanel_tab {
  box-sizing: border-box;
  width: 25%;
  background-color: #000;
  color: #fff;
  margin: 0px 3px;
  text-align: center;
  font-family: 'Cantarell';
  font-size: 16px;
  line-height: 50px;
  border-top-right-radius: 20px;
  border-top-left-radius: 20px;
  border-bottom: 5px solid #f00;
  cursor: crosshair;
}

.tab_selected {
  background-color: #f00;
}

.rpanel_content {
  box-sizing: border-box;
  width: calc(100% - 6px);
  height: calc(100% - 55px);
  border-top: 10px solid #000;
  color: #000;
  background-color: #fff;
  margin-left: 3px;
}

.content_active { display: block; height: calc(100% - 38px); }
.content_deselected { display: none; }

.tab_split_table {
  height: 100%;
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  justify-content: space-between;
}

.tab_st_column {
  box-sizing: border-box;
  width: calc(50% - 10px);
  height: 100%;
}

.tab_st_column_header {
  font-family: "Cantarell";
  font-size: 16px;
  text-transform: uppercase;
  font-weight: bold;
  color: #000;
  padding: 10px 0px;
}

.tab_st_column_box {
  box-sizing: border-box;
  height: 100%;
  background-color: #000;
  color: #fff;
  font-family: "Roboto Condensed";
  padding: 10px;
}

.user_friend {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: center;
}

.user_friend img {
  width: 32px; height: 32px;
  border-radius: 50%;
  margin: 5px 10px;
}

.user_friend a, .user_friend a:active, .user_friend a:visited {
  color: #fff;
  text-decoration: none;
}

.user_friend a:hover {
  color: #f00;
  cursor: crosshair;
}



/* IN DEPRECATED _USER_SHOWPG_FIND_OPPONENT_FORM PARTIAL */
/* #find_opponents_wrapper {
  display: flex;
  grid-auto-flow: column;
  justify-content: space-around;
  font-family: "Roboto Condensed";
  font-size: 15px;
}

ul.opponent_list {
  list-style: none;
  padding-left: 0px;
}

ul.opponent_list li a, ul.opponent_list li a:active, ul.opponent_list li a:visited {
  color: #f00;
  text-decoration: none;
}

ul.opponent_list a:hover {
  text-decoration: line-through;
}

ul.opponent_list li a::before {
  color: #000;
  content: "⯈ "
}

.opponent_column_title {
  font-family: "Cantarell";
  font-size: 20px;
  text-transform: uppercase;
  font-weight: bold;
} */




/* USER INDEX PAGE */

.all_users {
  width: calc(100% - 100px); height: calc(100% - 100px);
  display: block;
  position: relative;
}

.all_users_title {
  font-family: 'Cantarell';
  font-size: 40px;
  font-weight: bold;
}

.all_users_list {
  font-family: 'Roboto Condensed';
  font-size: 20px;
}

.all_users_list a, .all_users_list a:active, .all_users_list a:visited {
  color: #f00;
}

.all_users_list a:hover {
  text-decoration: line-through;
}

